Ajustes no Upload de Imagens

--- a/Vidracaria_Portal/Vidracaria_Portal.csproj
+++ b/Vidracaria_Portal/Vidracaria_Portal.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\imagensSaves\Ferragens\" />
     <Folder Include="wwwroot\imagensSaves\Aluminios\" />
+    <Folder Include="wwwroot\imagensSaves\Orcamentos\" />
     <Folder Include="wwwroot\imagensSaves\VidrosComuns\" />
     <Folder Include="wwwroot\imagensSaves\VidrosTemperados\" />
   </ItemGroup>
