Cadastrar um novo membro no time

--- a/Vidracaria_Portal/Vidracaria_Portal.csproj
+++ b/Vidracaria_Portal/Vidracaria_Portal.csproj
@@ -47,6 +47,8 @@
     <Folder Include="wwwroot\imagensSaves\Ferragens\" />
     <Folder Include="wwwroot\imagensSaves\Aluminios\" />
     <Folder Include="wwwroot\imagensSaves\Galeria\" />
+    <Folder Include="wwwroot\imagensSaves\Time\" />
+    <Folder Include="wwwroot\imagensSaves\Servicos\" />
     <Folder Include="wwwroot\imagensSaves\Orcamentos\" />
     <Folder Include="wwwroot\imagensSaves\VidrosComuns\" />
     <Folder Include="wwwroot\imagensSaves\VidrosTemperados\" />
